--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -66,6 +66,11 @@
 
 /*** NEW CSS ***/
 
+.top-bar {
+  width: 100%;
+  height: 5vh;
+}
+
 .window-content {
   display: flex;
   align-items: center;
@@ -74,7 +79,7 @@
 }
 
 .column {
-  height: 100vh;
+  height: 95vh;
   display: flex;
   flex-direction: column;
 }
