--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -194,6 +194,11 @@ button.reload {
   padding: 1em 0.5em;
 }
 
+.test-sets ul {
+  list-style: none;
+  padding: 0.5em;
+}
+
 .column-2 {
   flex: 1 1 auto;
   background-color: #F7F6F5;
@@ -566,10 +571,6 @@ Middle Column (2)
   margin-top: 5px;
   float: left;
   cursor: pointer;
-}
-
-.suite:not(.active) .onoff {
-  pointer-events: none;
 }
 
 button.run-tests {
