Adding "looks good!" state, closes 76

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -455,6 +455,14 @@ General Suites and test
   margin-left: 4px;
 }
 
+.all-passed {
+    height: 400px;
+    background-image: url("../img/all-good.png");
+    background-size: 300px;
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+
 .test-sets {
 
 }
