--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -92,7 +92,7 @@
   /*background: #ffffff;*/
   /*background-color: #F7F6F5;*/
   background-color: #E6E4E3;
-  padding-bottom: 20px;
+  padding-bottom: 200px;
 
   max-height: 100vh;
   overflow-y: auto;
@@ -456,11 +456,10 @@ General Suites and test
 }
 
 .all-passed {
-    height: 400px;
     background-image: url("../img/all-good.png");
-    background-size: 300px;
+    background-size: contain;
     background-repeat: no-repeat;
-    background-position: top center;
+    background-position: bottom center;
 }
 
 .test-sets {
