add logic to highlight cells in the grid on hover #102. need @enjalot to help hook up overview again cc @ejfox

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -222,6 +222,14 @@ button.reload {
   overflow-y: auto;
 }
 
+td.htCommentCell {
+  background-color: rgba(230, 192, 0, 0.5);
+}
+
+td.htCommentCell.filtered {
+  background-color: rgba(224, 62, 34, 0.5);
+}
+
 .grid-footer {
   z-index: 3;
   background-color: #ECEBE9;
