--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -52,7 +52,11 @@
   position: fixed;
 }
 
-.pass-icon {
+.result-icon {
+  width: 12px;
+}
+
+.pass .fa-check-circle {
   color: #29A03B;
 }
 
@@ -60,8 +64,7 @@
   color: #858585;
 }
 
-.fail-icon {
-  display: inline-block;
+.fail .fa-times-circle {
   color: #D43833;
 }
 
@@ -102,8 +105,7 @@
 }
 
 .column-1 p {
-  margin-left: 1em;
-  margin-right: 1em;
+  margin: 1em;
 }
 
 .column-1-wrapper {
@@ -149,7 +151,7 @@ button.reload {
   display: inline-block;
   font-size: 16px;
   border: 0;
-  padding: 0.5em;
+  padding: 0.4em;
 }
 
 #file-size-warning {
@@ -210,6 +212,12 @@ button.reload {
 .summary {
   text-align: center;
   font-weight: bold;
+  margin-top: 10px;
+}
+
+.test * {
+  vertical-align: baseline;
+  margin-bottom: 5px;
 }
 
 .test .info-wrapper {
@@ -329,7 +337,7 @@ Grid
   line-height: 1.3;
   text-align: center;
   color: #858585;
-  padding: 0.8em;
+  padding: 0.5em;
 }
 
 .summary-results {
