--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -34,6 +34,7 @@
 
 .hidden {
   display: none !important;
+  pointer-events: none;
 }
 
 .opaque {
@@ -61,12 +62,16 @@
   color: #29A03B;
 }
 
-.icon-neutral {
-  color: #858585;
+.fail .fa {
+  color: #D43833;
 }
 
-.fail .fa-times-circle {
-  color: #D43833;
+.warn .fa {
+  color: #e6c000;
+}
+
+.info .fa {
+  color: #48C2C5;
 }
 
 /*** NEW CSS ***/
@@ -153,7 +158,7 @@ button.reload {
   font-size: 16px;
   border: 0;
   padding: 0.4em;
-  padding-bottom: 0;
+  padding-bottom: 15px;
 }
 
 #file-size-warning {
@@ -181,13 +186,14 @@ button.reload {
 }
 
 #spreadsheet-input {
-  width: 49%;
+  width: 50%;
   display: inline-block;
   height: auto;
   font-size: 10px;
   outline: none;
-  background-color: #F3F1ED;
-  padding: 1.2em 0.5em;
+  border: 0;
+  background-color: #ffffff;
+  padding: 1.4em 0.5em;
 }
 
 #spreadsheet-input:active, #spreadsheet-input:focus {
@@ -219,7 +225,7 @@ button.reload {
 .summary {
   text-align: center;
   font-weight: bold;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 .test * {
@@ -232,14 +238,14 @@ button.reload {
 }
 
 .test .info-wrapper .filter-btn,
-.test .info-wrapper .fa-info-circle {
+.test .info-wrapper .fa-question-circle {
   display: inline-block;
   cursor: pointer;
   margin: 0 5px;
   transition: all 0.15s ease;
 }
 
-.test.active .info-wrapper .fa-info-circle {
+.test.active .info-wrapper .fa-question-circle {
   margin: 0 10px;
 }
 
@@ -272,6 +278,17 @@ td.htCommentCell.filtered {
   background-color: #ECEBE9;
   padding: 1em;
   flex: 0 0 auto;
+}
+
+input#search-field {
+  width: 95%;
+  display: inline-block;
+  height: auto;
+  font-size: 10px;
+  outline: none;
+  background-color: #ffffff;
+  padding: 0.5em 0.5em;
+  border: 0;
 }
 
 .column-3 {
@@ -339,7 +356,7 @@ Grid
   background: pink;
 }
 
-.info {
+.header-info {
   font-size: 12px;
   line-height: 1.3;
   text-align: center;
@@ -494,6 +511,14 @@ General Suites and test
 
 .test.fail {
   border-left-color: #E03E22 !important;
+}
+
+.test.warn {
+  border-left-color: #e6c000 !important;
+}
+
+.test.info {
+  border-left-color: #48C2C5 !important;
 }
 
 .test.fail .toggle {
