--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -82,11 +82,11 @@
 
 /*** NEW CSS ***/
 
-.top-bar {
+/*.top-bar {
   width: 100%;
   height: 22px;
   background-color: #000;
-}
+}*/
 
 .window-content {
   display: flex;
@@ -96,7 +96,7 @@
 }
 
 .column {
-  height: 97vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
