improved sampling logic handles all rows up to a thousand, samples a quarter of the rows at a time for datasets between 1000 and 10,000 rows, and then has a maximum of 10,000 as its largest possible sample size. CLI allows for tweaking the sample size's minimum, maximum, and ratio.

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -179,8 +179,10 @@ button.reload {
 }
 
 #file-loader-button {
+  box-sizing: border-box;
   display: block;
   width: 90%;
+
   margin-left: auto;
   margin-right: auto;
 }
