--- a/electron/css/skin.css
+++ b/electron/css/skin.css
@@ -85,20 +85,30 @@ hr { display: none; }
   padding-top: 15px;
 }
 
+#nav-buttons button:first-of-type {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+#nav-buttons button:last-of-type {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.rounded { border-radius: 10px; }
+
 #nav-buttons button#back-button {
     color: rgba(36, 41, 67, 1);
     background-color: rgba(36, 41, 67, .1);
     border: 1px solid rgba(36, 41, 67, .15);
     display: inline-block;
     margin-right: -2px;
-    border-radius: 5px 0 0 5px;
 }
 
 #nav-buttons button#forward-button {
   border: 1px solid rgba(53, 44, 81, .1);
   background-color: rgba(53, 44, 81, .1);
   color: rgba(53, 44, 81, 1);
-  border-radius: 0 5px 5px 0;
 }
 
 #nav-buttons button#back-button:hover {
