--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -237,7 +237,6 @@ button.reload {
 .summary {
   text-align: center;
   font-weight: bold;
-  margin-top: 15px;
   font-size: 24px;
 }
 
@@ -330,8 +329,6 @@ input#search-field {
   overflow-y: scroll;
 }
 
-/*** OLD CSS ***/
-
 /* =============================================================================
 Navigation buttons
 ============================================================================= */
@@ -359,6 +356,34 @@ Navigation buttons
 }
 
 /* =============================================================================
+Sampling Progress
+============================================================================= */
+
+#progress-bar {
+  padding: 10px 15px;
+}
+
+#progress-info {
+  color: #858585;
+  font-size: 12px;
+}
+
+#progress-wrapper {
+  width: 100%;
+  height: 10px;
+  position: relative;
+  background-color: #ccc;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#progress {
+  height: 6px;
+  width: 0px;
+}
+
+/* =============================================================================
 Grid
 ============================================================================= */
 
@@ -377,10 +402,9 @@ Grid
 
 .header-info {
   font-size: 12px;
-  line-height: 1.3;
-  text-align: center;
+  line-height: 1;
   color: #858585;
-  padding: 0.5em;
+  padding: 0.5em 1em;
 }
 
 .summary-results {
