design(sidebar): justify left so not hidden in small windows

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -95,7 +95,7 @@
 .window-content {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   overflow: hidden;
 }
 
